<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jerma.mobilefinal.EditFood">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/foodName"
        android:hint="@string/typeName"

         />

    <EditText
        android:id="@+id/editCals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cals"
        android:layout_toEndOf="@+id/foodName"
        android:hint="@string/calHint"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editCarbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/carbs"
        android:layout_alignStart="@+id/editCals"
        android:hint="@string/carbHint"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fat"
        android:layout_alignStart="@+id/editCarbs"
        android:hint="@string/fatHint"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/protein"
        android:layout_alignStart="@+id/editFat"
        android:hint="@string/proteinHint"
        android:inputType="number"/>

    <TextView
        android:id="@+id/foodName"
        android:text="@string/fifname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/cals"
        android:text="@string/fifcals"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodName"
        />

    <TextView
        android:id="@+id/carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifcarb"
        android:layout_below="@+id/cals"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fiffat"
        android:layout_below="@+id/carbs"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifpro"
        android:layout_below="@+id/fat"
        android:padding="20dp"

        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/update" />

    <Button
        android:id="@+id/goingBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/submit"
        android:text="@string/backToMain" />

</RelativeLayout>
