<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/foodFragName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodFrag"
        android:padding="20dp"

        />

    <TextView
        android:id="@+id/foodFragID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragID"
        android:layout_below="@+id/foodFragName"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/foodFragCals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifcals"
        android:layout_below="@+id/foodFragID"
        android:padding="20dp"
        />

    <TextView
    android:id="@+id/foodFragFat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fiffat"
    android:layout_below="@+id/foodFragCarbs"
    android:padding="20dp"
    />

    <TextView
        android:id="@+id/foodFragPro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifpro"
        android:layout_below="@+id/foodFragFat"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/foodFragCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifcarb"
        android:layout_below="@+id/foodFragCals"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/deleteEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteEntry"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:layout_toEndOf="@+id/deleteEntry"
        />
</RelativeLayout>