<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jerma.mobilefinal.NutriMain">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/newFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NutriMainButton"
        android:layout_below="@+id/my_toolbar"

        />

    <Button
        android:id="@+id/foodListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_food_list"
        android:layout_below="@+id/newFoodButton"
        />

    <Button
        android:id="@+id/calcCals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_information"
        android:layout_below="@+id/foodListButton"
        />
</RelativeLayout>
