<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <EditText
        android:id="@+id/editDate_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_today_black_24dp"
        android:drawableTint="@color/textSecondary"
        android:focusable="false"
        android:hint="@string/edit_date"
        android:textAppearance="@style/InfoTextView"
        android:textColor="@color/cardview_dark_background"
        android:textColorHint="@color/textSecondary" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/EditPrice_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:textColorHint="@color/textSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditPrice_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_attach_money_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:fontFamily="@font/assistant_light"
            android:hint="@string/edit_price"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/EditLiter_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:textColorHint="@color/textSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditLiter_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_invert_colors_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:fontFamily="@font/assistant_light"
            android:hint="@string/edit_liters"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/EditTrip_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:textColorHint="@color/textSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EditTrip_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_directions_car_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:fontFamily="@font/assistant_light"
            android:hint="@string/edit_km"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/done_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/done" />

    </LinearLayout>

</LinearLayout>