<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stan.androidgroupproject.RefuelActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/refuel_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/refuel_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="2dp">

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/form_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refuel_appBar"
            android:backgroundTint="@color/colorPrimaryDark">

            <LinearLayout
                android:id="@+id/linear_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/date_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="48dp"
                    android:drawableEnd="@drawable/ic_today_black_24dp"
                    android:drawableTint="@color/very_light"
                    android:focusable="false"
                    android:hint="@string/pick_date"
                    android:textAppearance="@style/InfoTextView"
                    android:textColor="@color/textSecondaryLight"
                    android:textColorHint="@color/very_light"
                    android:theme="@style/EditTextTheme" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/price_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textColorHint="@color/very_light"
                    android:theme="@style/EditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/price_textInputEditText"
                        style="@style/TitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:drawableEnd="@drawable/ic_attach_money_black_24dp"
                        android:drawableTint="@color/very_light"
                        android:hint="@string/price"
                        android:inputType="number|numberDecimal"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/litre_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textColorHint="@color/very_light"
                    android:theme="@style/EditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/liter_textInputEditText"
                        style="@style/TitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:drawableEnd="@drawable/ic_invert_colors_black_24dp"
                        android:drawableTint="@color/very_light"
                        android:hint="@string/litres"
                        android:inputType="number|numberDecimal"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/trip_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_marginStart="@dimen/text_margin"
                    android:textColorHint="@color/very_light"
                    android:theme="@style/EditTextTheme">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/trip_textInputEditText"
                        style="@style/TitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:drawableEnd="@drawable/ic_directions_car_black_24dp"
                        android:drawableTint="@color/very_light"
                        android:hint="@string/trip_km"
                        android:inputType="number|numberDecimal"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/insert_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refuel_appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_done_black_24dp" />

</RelativeLayout>
